2007-09-14  Jeffrey Stedfast  <fejj@novell.com>

	* FormattingStrategy/CSharpIndentEngine.cs (PushColon): Handle the
	:: operator. Fixes bug #82316.

2007-09-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Minor fix.
	* Parser/TypeNameResolver.cs: Remove debug code.

2007-09-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs,
	  Parser/TypeNameResolver.cs: Implement support for ITypeResolver. Add
	  parameter completion support for delegate invocations. Fixes bug #82264
	  and #82238.
	* CSharpBinding.mdp: Fix warning level. Added new file.
	* CSharpAmbience.cs: Track API changes.
	* Makefile.am: Updated.

2007-09-14  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: Fixed 82425:Renaming a base method doesn't rename
	  overrides. (Fixed for properties too).

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpParameterDataProvider.cs: Improved method formatting.
	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs: When resolving a
	  type, take into account parameter types for methods and classes. Fixes
	  bug #82209.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpAmbience.cs: The name of a delegate is the name of the class, not
	  the return type of the invoke method. Don't show the delegate parameters
	  unless the 'show class modifiers' flag is set.

2007-09-13  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: Fixed re opened 82311: Rename fails when we have
	  two variables that are called the same. (another issue).

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/LanguageItemVisitor.cs: Properly resolve "this". Fixes bug #82503.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Allow showing intrinsic names only when
	  resolving is, as or new.
	* Gui/FormattingPanel.cs, CSharpBinding.mdp,
	  gtk-gui/CSharpBinding.FormattingPanelWidget.cs, gtk-gui/gui.stetic: